[package]
name                   = "heracles"
description            = "Heracles - Meme hunter"
version.workspace      = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
readme.workspace       = true
license.workspace      = true
edition.workspace      = true
rust-version.workspace = true
categories.workspace   = true
keywords.workspace     = true
publish.workspace      = true

[dependencies]
serde      = { workspace = true }
serde_yaml = { workspace = true }

tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

clap                    = { workspace = true }
clap_complete           = { workspace = true }
directories             = { workspace = true }
exitcode                = { workspace = true }
http                    = { workspace = true }
http-serde              = { workspace = true }
libc                    = { workspace = true }
resolve-path            = { workspace = true }
shadow-rs               = { workspace = true }
snafu                   = { workspace = true }
tokio                   = { workspace = true }
tokio-graceful-shutdown = { workspace = true }

heracles-base = { workspace = true }
listener      = { workspace = true }

[build-dependencies]
shadow-rs = { workspace = true }

[lints]
workspace = true
