[package]
name                   = "heracles-base"
description            = "Base"
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
readme.workspace       = true
license.workspace      = true
rust-version.workspace = true
categories.workspace   = true
keywords.workspace     = true
publish.workspace      = true

[dependencies]
directories = { workspace = true }
http        = { workspace = true }
once_cell   = { workspace = true }
semver      = { workspace = true }

[lints]
workspace = true
