[package]
name                   = "pump_amm"
description            = "Pump Amm"
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
readme.workspace       = true
license.workspace      = true
rust-version.workspace = true
categories.workspace   = true
keywords.workspace     = true
publish.workspace      = true

[dependencies]

futures      = { workspace = true }
futures-util = { workspace = true }

tracing = { workspace = true }
snafu   = { workspace = true }

anchor-client = { workspace = true }
anchor-lang   = { workspace = true }
solana-client = { workspace = true }

[lints]
workspace = true
